--- a/retailer.html
+++ b/retailer.html
@@ -15,7 +15,6 @@ body{margin:0;background:#f3f6fb}
 .main{padding:20px}
 .icon-bar{display:flex;gap:20px;justify-content:center;background:#064e3b;padding:12px;border-radius:14px;max-width:650px;margin:auto}
 .icon-btn{background:#16a34a;color:#fff;border:none;width:55px;height:55px;border-radius:50%;font-size:22px;cursor:pointer;position:relative}
-.notify-dot{position:absolute;top:8px;right:8px;width:10px;height:10px;border-radius:50%;background:red;display:none}
 .header{margin-top:15px;background:#fff;padding:15px;border-radius:12px;text-align:center;box-shadow:0 5px 15px rgba(0,0,0,.08)}
 .products-grid{display:grid;grid-template-columns:repeat(3,1fr);gap:10px;margin-top:20px}
 .product-card{background:#fff;padding:6px;border-radius:10px;text-align:center;cursor:pointer;box-shadow:0 3px 8px rgba(0,0,0,.08)}
@@ -34,7 +33,6 @@ button.primary{background:#16a34a;color:#fff;border:none;padding:10px 15px;borde
   <!-- ICON BAR -->
   <div class="icon-bar">
     <button class="icon-btn" onclick="openRetailerProfile()"><i class="bi bi-person-circle"></i></button>
-    <button class="icon-btn" onclick="openOrders()"><i class="bi bi-bag-check"></i></button>
   </div>
 
   <!-- HEADER -->
@@ -72,7 +70,7 @@ button.primary{background:#16a34a;color:#fff;border:none;padding:10px 15px;borde
  </div>
 </div>
 
-<!-- PROFILE -->
+<!-- PROFILE MODAL -->
 <div class="modal" id="profileModal">
  <div class="modal-content">
   <h3>🧑 Retailer Profile</h3>
@@ -86,7 +84,6 @@ button.primary{background:#16a34a;color:#fff;border:none;padding:10px 15px;borde
 
 <script>
 const API="https://shopbacked-vmhs.onrender.com";
-const TOKEN=localStorage.getItem("token");
 let selectedProduct=null;
 
 /* LOAD PRODUCTS */
@@ -113,69 +110,64 @@ function showDetail(p){
  detailModal.style.display="flex";
 }
 
-/* PAYMENT */
+/* START PAYMENT */
 async function startPayment(){
  if(!vehicleType.value) return alert("Select vehicle");
  const profile = JSON.parse(localStorage.getItem("retailerProfile")||"{}");
  if(!profile.address) return alert("Save your delivery address first");
 
- const res = await fetch(API+"/api/pay/create-order", {
-  method:"POST",
-  headers:{"Content-Type":"application/json","Authorization":"Bearer "+TOKEN},
-  body:JSON.stringify({productId:selectedProduct._id,vehicleType:vehicleType.value})
- });
- const data = await res.json();
+ try{
+  const res = await fetch(API+"/api/orders/pay-and-create", {
+    method:"POST",
+    headers:{"Content-Type":"application/json"},
+    body:JSON.stringify({
+      productId:selectedProduct._id,
+      retailerName:profile.name,
+      retailerMobile:profile.mobile,
+      retailerAddress:profile.address,
+      vehicleType:vehicleType.value
+    })
+  });
+  const data = await res.json();
+  if(!data.success) return alert("Failed to create order");
 
- const rzp = new Razorpay({
-  key:data.key,
-  amount:data.amount,
-  currency:"INR",
-  name:"ShopBacked",
-  order_id:data.orderId,
-  handler: function(resp){
-   finalizeOrder(resp.razorpay_payment_id);
-  }
- });
- rzp.open();
-}
+  const options = {
+    key: data.key,
+    amount: data.order.amount,
+    currency: data.order.currency,
+    name: "ShopBacked",
+    description: selectedProduct.productName,
+    order_id: data.order.id,
+    handler: function(response){
+      alert("Payment Successful ✅\nPayment ID: "+response.razorpay_payment_id);
+      closeAll();
+    },
+    prefill: {
+      name: profile.name,
+      contact: profile.mobile
+    },
+    theme: {color:"#16a34a"}
+  };
 
-/* CONFIRM ORDER AFTER PAYMENT */
-async function finalizeOrder(paymentId){
- const profile = JSON.parse(localStorage.getItem("retailerProfile")||"{}");
- const body = {
-   wholesalerId:selectedProduct.wholesalerId,
-   wholesalerName:selectedProduct.shopName,
-   wholesalerMobile:selectedProduct.mobile,
-   wholesalerAddress:selectedProduct.address,
-   productId:selectedProduct._id,
-   productName:selectedProduct.productName,
-   price:selectedProduct.price,
-   productImg:selectedProduct.image,
-   retailerName:profile.name,
-   retailerMobile:profile.mobile,
-   retailerAddress:profile.address,
-   vehicleType:vehicleType.value,
-   paymentId
- };
- const res = await fetch(API+"/api/orders/confirm-after-payment",{
-  method:"POST",
-  headers:{"Content-Type":"application/json","Authorization":"Bearer "+TOKEN},
-  body:JSON.stringify(body)
- });
- const data = await res.json();
- alert(data.success?"Order Placed ✅":"Order failed");
- closeAll();
+  const rzp = new Razorpay(options);
+  rzp.open();
+
+ } catch(e){ console.error(e); alert("Payment failed"); }
 }
 
 /* PROFILE */
 function openRetailerProfile(){
  const profile=JSON.parse(localStorage.getItem("retailerProfile")||"{}");
- profileName.value=profile.name||""; profileMobile.value=profile.mobile||""; profileAddress.value=profile.address||""; profileModal.style.display="flex";
+ profileName.value=profile.name||""; 
+ profileMobile.value=profile.mobile||""; 
+ profileAddress.value=profile.address||""; 
+ profileModal.style.display="flex";
 }
 function setProfile(){
  const profile={name:profileName.value,mobile:profileMobile.value,address:profileAddress.value};
  localStorage.setItem("retailerProfile",JSON.stringify(profile));
- alert("Profile Updated ✅"); closeAll();
+ alert("Profile Updated ✅"); 
+ closeAll();
 }
 
 /* HELPERS */
