--- a/retailer.html
+++ b/retailer.html
@@ -4,35 +4,38 @@
 <meta charset="UTF-8">
 <title>Retailer Dashboard</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet">
 <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
-
 <style>
+/* Styles same as previous + modal, cards, buttons etc. */
 *{box-sizing:border-box;font-family:Poppins,sans-serif}
 body{margin:0;background:#f3f6fb}
 .main{padding:20px}
 .icon-bar{display:flex;gap:20px;justify-content:center;background:#064e3b;padding:12px;border-radius:14px;max-width:650px;margin:auto}
 .icon-btn{background:#16a34a;color:#fff;border:none;width:55px;height:55px;border-radius:50%;font-size:22px;cursor:pointer;position:relative}
+.notify-dot{position:absolute;top:8px;right:8px;width:10px;height:10px;border-radius:50%;background:red;display:none}
 .header{margin-top:15px;background:#fff;padding:15px;border-radius:12px;text-align:center;box-shadow:0 5px 15px rgba(0,0,0,.08)}
 .products-grid{display:grid;grid-template-columns:repeat(3,1fr);gap:10px;margin-top:20px}
 .product-card{background:#fff;padding:6px;border-radius:10px;text-align:center;cursor:pointer;box-shadow:0 3px 8px rgba(0,0,0,.08)}
 .product-card img{width:100%;height:90px;object-fit:cover;border-radius:8px}
 .price{color:#16a34a;font-weight:600;font-size:13px}
+.order-card{background:#fff;padding:12px;margin-bottom:10px;border-radius:12px;box-shadow:0 3px 8px rgba(0,0,0,.08)}
+.badge{padding:4px 10px;border-radius:20px;font-size:12px;background:#e0f2fe;color:#075985}
 .modal{position:fixed;inset:0;background:rgba(0,0,0,.5);display:none;align-items:center;justify-content:center;z-index:20}
 .modal-content{background:#fff;padding:20px;width:90%;max-width:500px;border-radius:15px;max-height:85vh;overflow:auto}
 input,select,textarea{width:100%;padding:10px;margin:8px 0;border-radius:8px;border:1px solid #ccc}
 button.primary{background:#16a34a;color:#fff;border:none;padding:10px 15px;border-radius:10px;cursor:pointer}
 </style>
 </head>
-
 <body>
 <div class="main">
 
   <!-- ICON BAR -->
   <div class="icon-bar">
     <button class="icon-btn" onclick="openRetailerProfile()"><i class="bi bi-person-circle"></i></button>
+    <button class="icon-btn" onclick="openOrders()"><i class="bi bi-bag-check"></i></button>
+    <button class="icon-btn" onclick="checkDeliveryNotify()"><i class="bi bi-truck"></i><span id="deliveryDot" class="notify-dot"></span></button>
   </div>
 
   <!-- HEADER -->
@@ -55,16 +58,16 @@ button.primary{background:#16a34a;color:#fff;border:none;padding:10px 15px;borde
   <h3 id="dName"></h3>
   <img id="dImg" style="width:100%;border-radius:10px">
   <p id="dPrice"></p>
+  <p id="dDeliveryCharge"></p>
+  <p id="dTotal"></p>
   <p><b>Shop:</b> <span id="dShop"></span></p>
   <p><b>Address:</b> <span id="dAddress"></span></p>
-
   <select id="vehicleType">
     <option value="">Select Vehicle</option>
     <option value="two_wheeler">Two Wheeler</option>
     <option value="three_wheeler">Three Wheeler</option>
     <option value="four_wheeler">Four Wheeler</option>
   </select>
-
   <button class="primary" onclick="startPayment()">💳 Pay & Order</button>
   <button onclick="closeAll()">Cancel</button>
  </div>
@@ -82,21 +85,31 @@ button.primary{background:#16a34a;color:#fff;border:none;padding:10px 15px;borde
  </div>
 </div>
 
+<!-- ORDERS MODAL -->
+<div class="modal" id="ordersModal">
+ <div class="modal-content">
+  <h3>📜 My Orders</h3>
+  <div id="myOrders"></div>
+  <button onclick="closeAll()">Close</button>
+ </div>
+</div>
+
 <script>
 const API="https://shopbacked-vmhs.onrender.com";
+const TOKEN=localStorage.getItem("token");
 let selectedProduct=null;
 
 /* LOAD PRODUCTS */
 async function loadProducts() {
   const id = document.getElementById("wid").value.trim();
-  if (!id) return alert("Wholesaler ID required");
-  try {
+  if(!id) return alert("Wholesaler ID required");
+  try{
     const res = await fetch(`${API}/api/products/wholesaler/${id}`);
     const data = await res.json();
-    if (!data.products.length) { products.innerHTML="No products"; return; }
+    if(!data.products.length){ products.innerHTML="No products"; return; }
     products.innerHTML = data.products.map(p => `<div class="product-card" onclick='showDetail(${JSON.stringify(p)})'>
       <img src="${p.image}"><div>${p.productName}</div><div class="price">₹${p.price}</div></div>`).join("");
-  } catch (err){ console.error(err); alert("Failed to load products"); }
+  }catch(e){ console.error(e); alert("Failed to load products"); }
 }
 
 /* SHOW DETAIL */
@@ -104,9 +117,12 @@ function showDetail(p){
  selectedProduct=p;
  dName.innerText=p.productName;
  dImg.src=p.image;
- dPrice.innerText="₹"+p.price;
+ dPrice.innerText="Price: ₹"+p.price;
  dShop.innerText=p.shopName;
  dAddress.innerText=p.address;
+ dDeliveryCharge.innerText = "";
+ dTotal.innerText = "";
+ vehicleType.value = "";
  detailModal.style.display="flex";
 }
 
@@ -116,61 +132,117 @@ async function startPayment(){
  const profile = JSON.parse(localStorage.getItem("retailerProfile")||"{}");
  if(!profile.address) return alert("Save your delivery address first");
 
+ let deliveryCharge = 0;
+ switch(vehicleType.value){
+   case "two_wheeler": deliveryCharge = 20; break;
+   case "three_wheeler": deliveryCharge = 50; break;
+   case "four_wheeler": deliveryCharge = 80; break;
+ }
+
+ const totalAmount = selectedProduct.price + deliveryCharge;
+
+ dDeliveryCharge.innerText = "Delivery Charge: ₹"+deliveryCharge;
+ dTotal.innerText = "Total: ₹"+totalAmount;
+
  try{
-  const res = await fetch(API+"/api/orders/pay-and-create", {
-    method:"POST",
-    headers:{"Content-Type":"application/json"},
-    body:JSON.stringify({
-      productId:selectedProduct._id,
-      retailerName:profile.name,
-      retailerMobile:profile.mobile,
-      retailerAddress:profile.address,
-      vehicleType:vehicleType.value
-    })
-  });
-  const data = await res.json();
-  if(!data.success) return alert("Failed to create order");
+   const res = await fetch(API+"/api/orders/pay-and-create",{
+     method:"POST",
+     headers:{"Content-Type":"application/json","Authorization":"Bearer "+TOKEN},
+     body:JSON.stringify({
+       productId:selectedProduct._id,
+       vehicleType:vehicleType.value,
+       amount:totalAmount,
+       retailerName:profile.name,
+       retailerMobile:profile.mobile,
+       retailerAddress:profile.address,
+       wholesalerId:selectedProduct.wholesalerId,
+       wholesalerName:selectedProduct.shopName,
+       wholesalerMobile:selectedProduct.mobile,
+       wholesalerAddress:selectedProduct.address
+     })
+   });
+   const data = await res.json();
+   if(!data.success) return alert("Failed to create order");
 
-  const options = {
-    key: data.key,
-    amount: data.order.amount,
-    currency: data.order.currency,
-    name: "ShopBacked",
-    description: selectedProduct.productName,
-    order_id: data.order.id,
-    handler: function(response){
-      alert("Payment Successful ✅\nPayment ID: "+response.razorpay_payment_id);
-      closeAll();
-    },
-    prefill: {
-      name: profile.name,
-      contact: profile.mobile
-    },
-    theme: {color:"#16a34a"}
-  };
+   const rzp = new Razorpay({
+     key:data.key,
+     amount:totalAmount*100,
+     currency:"INR",
+     name:"ShopBacked",
+     description:selectedProduct.productName,
+     order_id:data.order.id,
+     handler:function(resp){
+       finalizeOrder(resp.razorpay_payment_id);
+     },
+     prefill:{name:profile.name, contact:profile.mobile},
+     theme:{color:"#16a34a"}
+   });
+   rzp.open();
 
-  const rzp = new Razorpay(options);
-  rzp.open();
+ }catch(e){console.error(e); alert("Payment failed"); }
+}
 
- } catch(e){ console.error(e); alert("Payment failed"); }
+/* CONFIRM ORDER AFTER PAYMENT */
+async function finalizeOrder(paymentId){
+ const profile = JSON.parse(localStorage.getItem("retailerProfile")||"{}");
+ const body = {
+   productId:selectedProduct._id,
+   vehicleType:vehicleType.value,
+   paymentId,
+   retailerName:profile.name,
+   retailerMobile:profile.mobile,
+   retailerAddress:profile.address,
+   wholesalerId:selectedProduct.wholesalerId,
+   wholesalerName:selectedProduct.shopName,
+   wholesalerMobile:selectedProduct.mobile,
+   wholesalerAddress:selectedProduct.address
+ };
+ const res = await fetch(API+"/api/orders/confirm-after-payment",{
+   method:"POST",
+   headers:{"Content-Type":"application/json","Authorization":"Bearer "+TOKEN},
+   body:JSON.stringify(body)
+ });
+ const data = await res.json();
+ alert(data.success?"Order Placed ✅":"Order failed");
+ closeAll();
 }
 
 /* PROFILE */
 function openRetailerProfile(){
  const profile=JSON.parse(localStorage.getItem("retailerProfile")||"{}");
- profileName.value=profile.name||""; 
- profileMobile.value=profile.mobile||""; 
- profileAddress.value=profile.address||""; 
- profileModal.style.display="flex";
+ profileName.value=profile.name||""; profileMobile.value=profile.mobile||""; profileAddress.value=profile.address||""; profileModal.style.display="flex";
 }
 function setProfile(){
  const profile={name:profileName.value,mobile:profileMobile.value,address:profileAddress.value};
  localStorage.setItem("retailerProfile",JSON.stringify(profile));
- alert("Profile Updated ✅"); 
- closeAll();
+ alert("Profile Updated ✅"); closeAll();
 }
 
-/* HELPERS */
+/* ORDERS + DELIVERY NOTIFICATION */
+async function openOrders(){
+ ordersModal.style.display="flex";
+ const profile = JSON.parse(localStorage.getItem("retailerProfile")||"{}");
+ const res = await fetch(API+"/api/orders/retailer/"+profile.mobile);
+ const data = await res.json();
+ myOrders.innerHTML = data.orders.map(o=>`<div class="order-card">
+   <b>${o.productName}</b> ₹${o.price}<br>
+   <span class="badge">${o.status}</span>
+   ${o.deliveryCode?`<br>Delivery Code: <b>${o.deliveryCode}</b>`:""}
+ </div>`).join("") || "No orders";
+}
+
+/* DELIVERY DOT */
+async function checkDeliveryNotify(){
+ const profile = JSON.parse(localStorage.getItem("retailerProfile")||"{}");
+ if(!profile.mobile) return;
+ const res = await fetch(API+"/api/orders/retailer/"+profile.mobile);
+ const data = await res.json();
+ const hasDelivery = data.orders.some(o=>o.deliveryBoyName);
+ document.getElementById("deliveryDot").style.display = hasDelivery?"block":"none";
+}
+
+setInterval(checkDeliveryNotify,8000);
+
 function closeAll(){document.querySelectorAll('.modal').forEach(m=>m.style.display='none')}
 </script>
 </body>
