--- a/retailer.html
+++ b/retailer.html
@@ -33,7 +33,7 @@ button.primary{background:#16a34a;color:#fff;border:none;padding:10px 15px;borde
   <div class="icon-bar">
     <button class="icon-btn" onclick="openRetailerProfile()"><i class="bi bi-person-circle"></i></button>
     <button class="icon-btn" onclick="openOrders()"><i class="bi bi-bag-check"></i></button>
-    <button class="icon-btn" onclick="checkDeliveryNotify()"><i class="bi bi-truck"></i><span id="deliveryDot" class="notify-dot"></span></button>
+    <button class="icon-btn" onclick="openOrders()"><i class="bi bi-truck"></i><span id="deliveryDot" class="notify-dot"></span></button>
   </div>
 
   <div class="header"><h3>🛒 Retailer Dashboard</h3></div>
