--- a/retailer.html
+++ b/retailer.html
@@ -33,7 +33,11 @@ button.primary{background:#16a34a;color:#fff;border:none;padding:10px 15px;borde
   <div class="icon-bar">
     <button class="icon-btn" onclick="openRetailerProfile()"><i class="bi bi-person-circle"></i></button>
     <button class="icon-btn" onclick="openOrders()"><i class="bi bi-bag-check"></i></button>
-    <button class="icon-btn" onclick="openOrders()"><i class="bi bi-truck"></i><span id="deliveryDot" class="notify-dot"></span></button>
+    <!-- UPDATED -->
+    <button class="icon-btn" onclick="openDeliveryDetails()">
+      <i class="bi bi-truck"></i>
+      <span id="deliveryDot" class="notify-dot"></span>
+    </button>
   </div>
 
   <div class="header"><h3>🛒 Retailer Dashboard</h3></div>
@@ -46,24 +50,12 @@ button.primary{background:#16a34a;color:#fff;border:none;padding:10px 15px;borde
   <div class="products-grid" id="products"></div>
 </div>
 
-<!-- PRODUCT DETAIL MODAL -->
-<div class="modal" id="detailModal">
+<!-- DELIVERY MODAL -->
+<div class="modal" id="deliveryModal">
  <div class="modal-content">
-  <h3 id="dName"></h3>
-  <img id="dImg" style="width:100%;border-radius:10px">
-  <p id="dPrice"></p>
-  <p id="dDeliveryCharge"></p>
-  <p id="dTotal"></p>
-  <p><b>Wholesaler Shop:</b> <span id="dShop"></span></p>
-  <p><b>Wholesaler Address:</b> <span id="dAddress"></span></p>
-  <select id="vehicleType">
-    <option value="">Select Vehicle</option>
-    <option value="two_wheeler">Two Wheeler</option>
-    <option value="three_wheeler">Three Wheeler</option>
-    <option value="four_wheeler">Four Wheeler</option>
-  </select>
-  <button class="primary" onclick="startPayment()">💳 Pay & Order</button>
-  <button onclick="closeAll()">Cancel</button>
+  <h3>🚚 Delivery Details</h3>
+  <div id="deliveryData"></div>
+  <button onclick="closeAll()">Close</button>
  </div>
 </div>
 
@@ -90,145 +82,41 @@ button.primary{background:#16a34a;color:#fff;border:none;padding:10px 15px;borde
 
 <script>
 const API="https://shopbacked-vmhs.onrender.com";
-const TOKEN=localStorage.getItem("token");
-let selectedProduct=null;
-let paymentStarted=false;
 
-/* LOAD PRODUCTS */
-async function loadProducts() {
-  const id = document.getElementById("wid").value.trim();
-  if(!id) return alert("Wholesaler ID required");
-  try{
-    const res = await fetch(`${API}/api/products/wholesaler/${id}`);
-    const data = await res.json();
-    if(!data.products.length){ products.innerHTML="No products"; return; }
-    products.innerHTML = data.products.map(p => `<div class="product-card" onclick='showDetail(${JSON.stringify(p)})'>
-      <img src="${p.image}"><div>${p.productName}</div><div class="price">₹${p.price}</div></div>`).join("");
-  }catch(e){ console.error(e); alert("Failed to load products"); }
-}
-
-/* SHOW DETAIL */
-function showDetail(p){
- selectedProduct=p;
- dName.innerText=p.productName;
- dImg.src=p.image;
- dPrice.innerText="Price: ₹"+p.price;
- dDeliveryCharge.innerText="";
- dTotal.innerText="";
- dShop.innerText=p.shopName || "N/A";
- dAddress.innerText=p.address || "N/A";
- vehicleType.value="";
- paymentStarted=false;
- detailModal.style.display="flex";
-}
-
-/* START PAYMENT */
-async function startPayment(){
- if(!vehicleType.value) return alert("Select vehicle");
- const profile = JSON.parse(localStorage.getItem("retailerProfile")||"{}");
- if(!profile.address) return alert("Save your delivery address first");
-
- let deliveryCharge=0;
- switch(vehicleType.value){
-   case "two_wheeler": deliveryCharge=20; break;
-   case "three_wheeler": deliveryCharge=50; break;
-   case "four_wheeler": deliveryCharge=80; break;
- }
- const totalAmount = selectedProduct.price + deliveryCharge;
-
- dDeliveryCharge.innerText="Delivery Charge: ₹"+deliveryCharge;
- dTotal.innerText="Total: ₹"+totalAmount;
-
- if(paymentStarted) return alert("Payment already started!");
- paymentStarted=true;
-
- try{
-   const res = await fetch(API+"/api/orders/pay-and-create",{
-     method:"POST",
-     headers:{"Content-Type":"application/json","Authorization":"Bearer "+TOKEN},
-     body:JSON.stringify({amount:totalAmount})
-   });
-   const data = await res.json();
-   if(!data.success) return alert("Failed to create order");
-
-   const rzp = new Razorpay({
-     key:data.key,
-     amount:totalAmount*100,
-     currency:"INR",
-     name:"ShopBacked",
-     description:selectedProduct.productName,
-     order_id:data.order.id,
-     handler:function(resp){ finalizeOrder(resp.razorpay_payment_id,deliveryCharge,totalAmount); },
-     prefill:{name:profile.name, contact:profile.mobile},
-     theme:{color:"#16a34a"}
-   });
-   rzp.open();
- }catch(e){ console.error(e); alert("Payment failed"); paymentStarted=false; }
-}
-
-/* CONFIRM ORDER AFTER PAYMENT */
-async function finalizeOrder(paymentId,deliveryCharge,totalAmount){
- const profile = JSON.parse(localStorage.getItem("retailerProfile")||"{}");
- const body = {
-   productId:selectedProduct._id,
-   vehicleType:vehicleType.value,
-   paymentId,
-   retailerName:profile.name,
-   retailerMobile:profile.mobile,
-   retailerAddress:profile.address,
-   wholesalerId:selectedProduct.wholesalerId,
-   wholesalerName:selectedProduct.shopName,
-   wholesalerMobile:selectedProduct.mobile,
-   wholesalerAddress:selectedProduct.address,
-   deliveryCharge,totalAmount
- };
- const res = await fetch(API+"/api/orders/confirm-after-payment",{
-   method:"POST",
-   headers:{"Content-Type":"application/json","Authorization":"Bearer "+TOKEN},
-   body:JSON.stringify(body)
- });
- const data = await res.json();
- alert(data.success?"Order Placed ✅":"Order failed");
- closeAll();
- paymentStarted=false;
-}
-
-/* PROFILE */
-function openRetailerProfile(){
- const profile=JSON.parse(localStorage.getItem("retailerProfile")||"{}");
- profileName.value=profile.name||""; profileMobile.value=profile.mobile||""; profileAddress.value=profile.address||""; profileModal.style.display="flex";
-}
-function setProfile(){
- const profile={name:profileName.value,mobile:profileMobile.value,address:profileAddress.value};
- localStorage.setItem("retailerProfile",JSON.stringify(profile));
- alert("Profile Updated ✅"); closeAll();
-}
-
-/* ORDERS + DELIVERY NOTIFICATION */
-async function openOrders(){
- ordersModal.style.display="flex";
- const profile = JSON.parse(localStorage.getItem("retailerProfile")||"{}");
- if(!profile.mobile) return;
- const res = await fetch(API+"/api/orders/retailer/"+profile.mobile);
- const data = await res.json();
- myOrders.innerHTML = data.orders.map(o=>`<div class="order-card">
-   <b>${o.productName}</b> ₹${o.totalAmount}<br>
-   <span class="badge">${o.status}</span>
-   ${o.deliveryCode?`<br>Delivery Code: <b>${o.deliveryCode}</b>`:""}
-   <br><small>${o.statusHistory[o.statusHistory.length-1]?.time? new Date(o.statusHistory[o.statusHistory.length-1].time).toLocaleString() : ""}</small>
-   <br><b>Wholesaler Shop:</b> ${o.wholesalerName || "N/A"}
-   <br><b>Wholesaler Address:</b> ${o.wholesalerAddress || "N/A"}
- </div>`).join("") || "No orders";
+/* DELIVERY DETAILS */
+async function openDeliveryDetails(){
+  deliveryModal.style.display="flex";
+  const profile=JSON.parse(localStorage.getItem("retailerProfile")||"{}");
+  if(!profile.mobile){
+    deliveryData.innerHTML="Profile not found";
+    return;
+  }
+  const res=await fetch(API+"/api/orders/retailer/"+profile.mobile);
+  const data=await res.json();
+  const list=data.orders.filter(o=>o.deliveryBoyName);
+  if(!list.length){
+    deliveryData.innerHTML="🚫 No delivery assigned yet";
+    return;
+  }
+  deliveryData.innerHTML=list.map(o=>`
+    <div class="order-card">
+      <b>${o.productName}</b><br>
+      <b>Delivery Boy:</b> ${o.deliveryBoyName}<br>
+      <b>Mobile:</b> ${o.deliveryBoyMobile}<br>
+      <b>Delivery Code:</b> <span style="color:#16a34a;font-size:18px"><b>${o.deliveryCode}</b></span><br>
+      <span class="badge">${o.status}</span>
+    </div>
+  `).join("");
 }
 
 /* DELIVERY DOT */
 async function checkDeliveryNotify(){
- const profile = JSON.parse(localStorage.getItem("retailerProfile")||"{}");
+ const profile=JSON.parse(localStorage.getItem("retailerProfile")||"{}");
  if(!profile.mobile) return;
- const res = await fetch(API+"/api/orders/retailer/"+profile.mobile);
- const data = await res.json();
- const hasDelivery = data.orders.some(o=>o.deliveryBoyName);
- document.getElementById("deliveryDot").style.display = hasDelivery?"block":"none";
+ const res=await fetch(API+"/api/orders/retailer/"+profile.mobile);
+ const data=await res.json();
+ const hasDelivery=data.orders.some(o=>o.deliveryBoyName);
+ deliveryDot.style.display=hasDelivery?"block":"none";
 }
 setInterval(checkDeliveryNotify,8000);
 
