--- a/retailer.html
+++ b/retailer.html
@@ -4,9 +4,11 @@
 <meta charset="UTF-8">
 <title>Retailer Dashboard</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet">
 <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+
 <style>
 *{box-sizing:border-box;font-family:Poppins,sans-serif}
 body{margin:0;background:#f3f6fb}
@@ -27,100 +29,189 @@ input,select,textarea{width:100%;padding:10px;margin:8px 0;border-radius:8px;bor
 button.primary{background:#16a34a;color:#fff;border:none;padding:10px 15px;border-radius:10px;cursor:pointer}
 </style>
 </head>
+
 <body>
 <div class="main">
 
-  <div class="icon-bar">
-    <button class="icon-btn" onclick="openRetailerProfile()"><i class="bi bi-person-circle"></i></button>
-    <button class="icon-btn" onclick="openOrders()"><i class="bi bi-bag-check"></i></button>
-    <!-- UPDATED -->
-    <button class="icon-btn" onclick="openDeliveryDetails()">
-      <i class="bi bi-truck"></i>
-      <span id="deliveryDot" class="notify-dot"></span>
-    </button>
-  </div>
-
-  <div class="header"><h3>🛒 Retailer Dashboard</h3></div>
-
-  <div class="header">
-    <input id="wid" placeholder="Enter Wholesaler ID">
-    <button class="primary" onclick="loadProducts()">Search</button>
-  </div>
-
-  <div class="products-grid" id="products"></div>
+<div class="icon-bar">
+  <button class="icon-btn" onclick="openRetailerProfile()"><i class="bi bi-person-circle"></i></button>
+  <button class="icon-btn" onclick="openOrders()"><i class="bi bi-bag-check"></i></button>
+  <button class="icon-btn" onclick="openDeliveryDetails()">
+    <i class="bi bi-truck"></i>
+    <span id="deliveryDot" class="notify-dot"></span>
+  </button>
 </div>
 
-<!-- DELIVERY MODAL -->
-<div class="modal" id="deliveryModal">
+<div class="header"><h3>🛒 Retailer Dashboard</h3></div>
+
+<div class="header">
+  <input id="wid" placeholder="Enter Wholesaler ID">
+  <button class="primary" onclick="loadProducts()">Search</button>
+</div>
+
+<div class="products-grid" id="products"></div>
+</div>
+
+<!-- PRODUCT MODAL -->
+<div class="modal" id="detailModal">
  <div class="modal-content">
-  <h3>🚚 Delivery Details</h3>
-  <div id="deliveryData"></div>
+  <h3 id="dName"></h3>
+  <img id="dImg" style="width:100%;border-radius:10px">
+  <p id="dPrice"></p>
+  <p id="dDeliveryCharge"></p>
+  <p id="dTotal"></p>
+  <select id="vehicleType">
+    <option value="">Select Vehicle</option>
+    <option value="two_wheeler">Two Wheeler</option>
+    <option value="three_wheeler">Three Wheeler</option>
+    <option value="four_wheeler">Four Wheeler</option>
+  </select>
+  <button class="primary" onclick="startPayment()">Pay & Order</button>
   <button onclick="closeAll()">Close</button>
  </div>
 </div>
 
-<!-- PROFILE MODAL -->
+<!-- PROFILE -->
 <div class="modal" id="profileModal">
  <div class="modal-content">
-  <h3>🧑 Retailer Profile</h3>
-  <input id="profileName" placeholder="Retailer Name">
-  <input id="profileMobile" placeholder="Retailer Mobile">
-  <textarea id="profileAddress" placeholder="Retailer Address (Required)"></textarea>
-  <button class="primary" onclick="setProfile()">Save Profile</button>
+  <h3>Retailer Profile</h3>
+  <input id="profileName" placeholder="Name">
+  <input id="profileMobile" placeholder="Mobile">
+  <textarea id="profileAddress" placeholder="Address"></textarea>
+  <button class="primary" onclick="saveProfile()">Save</button>
   <button onclick="closeAll()">Close</button>
  </div>
 </div>
 
-<!-- ORDERS MODAL -->
+<!-- ORDERS -->
 <div class="modal" id="ordersModal">
  <div class="modal-content">
-  <h3>📜 My Orders</h3>
+  <h3>My Orders</h3>
   <div id="myOrders"></div>
+  <button onclick="closeAll()">Close</button>
+ </div>
+</div>
+
+<!-- DELIVERY -->
+<div class="modal" id="deliveryModal">
+ <div class="modal-content">
+  <h3>Delivery Details</h3>
+  <div id="deliveryData"></div>
   <button onclick="closeAll()">Close</button>
  </div>
 </div>
 
 <script>
 const API="https://shopbacked-vmhs.onrender.com";
+let selectedProduct=null;
+
+/* LOAD PRODUCTS */
+async function loadProducts(){
+ const wid=document.getElementById("wid").value.trim();
+ if(!wid) return alert("Enter wholesaler ID");
+ const res=await fetch(`${API}/api/products/wholesaler/${wid}`);
+ const data=await res.json();
+ products.innerHTML=data.products.map(p=>`
+  <div class="product-card" onclick='showDetail(${JSON.stringify(p)})'>
+   <img src="${p.image}">
+   <div>${p.productName}</div>
+   <div class="price">₹${p.price}</div>
+  </div>`).join("");
+}
+
+/* PRODUCT DETAIL */
+function showDetail(p){
+ selectedProduct=p;
+ dName.innerText=p.productName;
+ dImg.src=p.image;
+ dPrice.innerText="Price ₹"+p.price;
+ dDeliveryCharge.innerText="";
+ dTotal.innerText="";
+ detailModal.style.display="flex";
+}
+
+/* PAYMENT (DEMO) */
+function startPayment(){
+ alert("Payment success (demo)");
+ finalizeOrder();
+}
+
+/* CREATE ORDER */
+async function finalizeOrder(){
+ const profile=JSON.parse(localStorage.getItem("retailerProfile")||"{}");
+ await fetch(API+"/api/orders/confirm-after-payment",{
+  method:"POST",
+  headers:{"Content-Type":"application/json"},
+  body:JSON.stringify({
+   productId:selectedProduct._id,
+   retailerName:profile.name,
+   retailerMobile:profile.mobile,
+   retailerAddress:profile.address,
+   wholesalerId:selectedProduct.wholesalerId
+  })
+ });
+ alert("Order placed");
+ closeAll();
+}
+
+/* PROFILE */
+function openRetailerProfile(){
+ const p=JSON.parse(localStorage.getItem("retailerProfile")||"{}");
+ profileName.value=p.name||"";
+ profileMobile.value=p.mobile||"";
+ profileAddress.value=p.address||"";
+ profileModal.style.display="flex";
+}
+function saveProfile(){
+ localStorage.setItem("retailerProfile",JSON.stringify({
+  name:profileName.value,
+  mobile:profileMobile.value,
+  address:profileAddress.value
+ }));
+ alert("Profile saved");
+ closeAll();
+}
+
+/* ORDERS */
+async function openOrders(){
+ ordersModal.style.display="flex";
+ const p=JSON.parse(localStorage.getItem("retailerProfile")||"{}");
+ const res=await fetch(`${API}/api/orders/retailer/${p.mobile}`);
+ const data=await res.json();
+ myOrders.innerHTML=data.orders.map(o=>`
+  <div class="order-card">
+   <b>${o.productName}</b><br>
+   Status: <span class="badge">${o.status}</span>
+  </div>`).join("");
+}
 
 /* DELIVERY DETAILS */
 async function openDeliveryDetails(){
-  deliveryModal.style.display="flex";
-  const profile=JSON.parse(localStorage.getItem("retailerProfile")||"{}");
-  if(!profile.mobile){
-    deliveryData.innerHTML="Profile not found";
-    return;
-  }
-  const res=await fetch(API+"/api/orders/retailer/"+profile.mobile);
-  const data=await res.json();
-  const list=data.orders.filter(o=>o.deliveryBoyName);
-  if(!list.length){
-    deliveryData.innerHTML="🚫 No delivery assigned yet";
-    return;
-  }
-  deliveryData.innerHTML=list.map(o=>`
-    <div class="order-card">
-      <b>${o.productName}</b><br>
-      <b>Delivery Boy:</b> ${o.deliveryBoyName}<br>
-      <b>Mobile:</b> ${o.deliveryBoyMobile}<br>
-      <b>Delivery Code:</b> <span style="color:#16a34a;font-size:18px"><b>${o.deliveryCode}</b></span><br>
-      <span class="badge">${o.status}</span>
-    </div>
-  `).join("");
+ deliveryModal.style.display="flex";
+ const p=JSON.parse(localStorage.getItem("retailerProfile")||"{}");
+ const res=await fetch(`${API}/api/orders/retailer/${p.mobile}`);
+ const data=await res.json();
+ const list=data.orders.filter(o=>o.deliveryBoyName);
+ deliveryData.innerHTML=list.length?list.map(o=>`
+  <div class="order-card">
+   <b>${o.productName}</b><br>
+   Boy: ${o.deliveryBoyName}<br>
+   Mobile: ${o.deliveryBoyMobile}<br>
+   Code: <b style="color:green">${o.deliveryCode}</b>
+  </div>`).join(""):"No delivery yet";
 }
 
-/* DELIVERY DOT */
+/* NOTIFY DOT */
 async function checkDeliveryNotify(){
- const profile=JSON.parse(localStorage.getItem("retailerProfile")||"{}");
- if(!profile.mobile) return;
- const res=await fetch(API+"/api/orders/retailer/"+profile.mobile);
+ const p=JSON.parse(localStorage.getItem("retailerProfile")||"{}");
+ if(!p.mobile) return;
+ const res=await fetch(`${API}/api/orders/retailer/${p.mobile}`);
  const data=await res.json();
- const hasDelivery=data.orders.some(o=>o.deliveryBoyName);
- deliveryDot.style.display=hasDelivery?"block":"none";
+ deliveryDot.style.display=data.orders.some(o=>o.deliveryBoyName)?"block":"none";
 }
 setInterval(checkDeliveryNotify,8000);
 
-function closeAll(){document.querySelectorAll('.modal').forEach(m=>m.style.display='none')}
+function closeAll(){document.querySelectorAll(".modal").forEach(m=>m.style.display="none")}
 </script>
 </body>
 </html>
